# Bezier_Interpolate

./: .gitignore  README.MD  pyproject.toml
src/BezierInterpolate/: interpolate.py  utils.py
src/bezier_interpolate.egg-info/: PKG-INFO  SOURCES.txt
