[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bezier_interpolate"
version = "0.0.1"
authors = [
{ name="Habil", email="habilamar@gmail.com" },
]
dependencies=[
    "numpy==2.2.0",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "six==1.17.0",
    "tzdata==2024.2"
]
description = "A small package to fill NaN values using Bezier Interpolation"
readme = "README.MD"
requires-python = ">=3.12"
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved :: MIT License",
"Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/HabilAmardias/Bezier_Interpolate"
Issues = "https://github.com/HabilAmardias/Bezier_Interpolate/issues"